XXX

	* Version X.X.X

	- Fix an issue in the PMEMOBJ allocator with a potential to corrupt the allocator's metadata (daos-stack/pmdk#24, DAOS-18195).
	- Fix compilation error on LoongArch. Thank you @liuxiang88 and @bgermann for your persistence in making it happen! (daos-stack/pmdk#29, pmem/pmdk#5957).

Tue Nov 4 2025 Oksana Sałyk <oksana.salyk@hpe.com>

	* Version 2.1.2

	- Set up a new home for pmdk software (pmem/pmdk -> daos-stack/pmdk).
	  - Reorganized PMem HW tests to accommodate changes in HW supplies (daos-stack/pmdk#9-12).
	- Expanded the sds.at_create CTL to also cover pmemobj_open() (daos-stack/pmdk#5, DAOS-17449)
	  - Previously, this CTL affected only pmemobj_create().
	  - Now, it affects both pmemobj_create() and pmemobj_open().
	  - pmemobj_open() won't be able to open a pool with SDS enabled if the feature is currently
	  force-disabled.
	  - Conversely, pmemobj_open() does not issue a warning when attempting to open a pool with SDS disabled
	  while the feature is force-disabled.

Wed Feb 19 2025 Oksana Sałyk <oksana.salyk@hpe.com>

	* Version 2.1.1

	- remove non-Linux support from all compilation paths (OS_KERNEL_NAME)
	- add an aarch64 cross-compilation (requested by DAOS)
	- mute error messages when transactions are intentionally aborted (#6117)
	- mute error message "Cannot find any matching device, no bad blocks found" when PMDK is used without PMem (#6127)

Thu May 23 2024 Oksana Sałyk <oksana.salyk@intel.com>

	* Version 2.1.0

	This release:
	- Introduces the new logging subsystem in the release build for all libraries.
	  - Messages by default are printed to syslog and stderr but might be redirected to a user-defined function, see pmem(obj)_log_set_function() for details.
	  - Log level thresholds are controlled via new API, see pmem(obj)_log_set_treshold() for details.
	  - These new APIs are not available for LIBPMEM2 and LIBPMEMPOOL at the moment.